crates/keron-lang/tests/corpus/errors/parse/unclosed_list.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: found end of input expected any, '#', '*', '/', '+', '-', '=', '!', '<', '>', ',', or ']'
  --> 2:1
  |
2 | 
  | ^
